--- a/aws-auth.yml
+++ b/aws-auth.yml
@@ -3,20 +3,14 @@ apiVersion: v1
 kind: ConfigMap
 
 metadata:
-
   name: aws-auth
 
   namespace: kube-system
 
 data:
-
   mapRoles: |
-
-    - rolearn: arn:aws:iam::902649160275:role/EKSBootcampRole
-
-      username: build
-
-      groups:
-
-        - system:masters
-
+    - groups:
+        - system:bootstrappers
+        - system:nodes
+      rolearn: arn:aws:iam::371198079589:role/FullEKSPermission
+      username: system:node:{{EC2PrivateDNSName}}
